Closed Bug 1661579 Opened 5 years ago Closed 5 years ago

Moving to previous marker does not work across wrapped lines

Categories

(Core :: Disability Access APIs, defect, P1)

All
macOS
defect

Tracking

()

RESOLVED FIXED
82 Branch
Tracking Status
firefox82 --- fixed

People

(Reporter: eeejay, Assigned: eeejay)

Details

(Whiteboard: [mac2020_1])

Attachments

(1 file)

It looks like PeekOffset returns the same offset, but the previous in flow iframe when searching backwards by cluster. I think we need to call PeekOffset on the previous-in-flow frame to begin with when the frame-relative offset is 0.

Assignee: nobody → eitan
Status: NEW → ASSIGNED
Pushed by eisaacson@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/312e5f280ef0 Use previous frame when searching backwards at start of frame. r=morgan
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: