Bug 1661579 - Use previous frame when searching backwards at start of frame. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D88489